Layout Issue
Changed position of footer.
Made container position relative.

--- a/final_web/css/slideshow.css
+++ b/final_web/css/slideshow.css
@@ -2,7 +2,7 @@
   position: relative;
   display: block;   
   margin:0 auto;
-  width: 70%;
+  width: 57%;
 }
 .bss-slides:focus{
  outline: 0;
@@ -23,7 +23,7 @@
   backface-visibility: hidden;
    border: 1px solid black;
   border-radius: 7px;
-  height: 300px;
+  height: 27em;
 }
 .bss-slides .bss-show{
   z-index: 2;
