--- a/final_web/css/style.css
+++ b/final_web/css/style.css
@@ -9,6 +9,18 @@ html,body {
 	color:#434343;
 }
 
+p{
+	margin: 0;
+	padding: 0;
+}
+
+.container{
+	position:relative;
+}
+
+.contentContainer{
+	height: 100%;
+}
 
 .clear{clear:both;}
 
@@ -44,6 +56,10 @@ html,body {
 	font-size: 30px;	
 }
 
+.contact{
+	top:50px;
+}
+
 #contactInfo ul{
 	padding:0;	
 }
@@ -68,7 +84,7 @@ html,body {
 #services { 
 	width: 100%; 
 	overflow: hidden; 
-	margin:10px 1px 14px 1px
+	margin-top:10px;
 }
 
 #info h2{
@@ -95,6 +111,9 @@ html,body {
 }
 
 footer {
-  bottom: 0;
   width: 100%;
-  }
+  position: absolute;
+  bottom:0;
+  text-align:right;
+}
+
